# transmission-tui

./: Cargo.toml  readme.md
.github/workflows/: code-checking.yml
src/: lib.rs  main.rs  runner.rs
src/components/: confirm.rs  list.rs  mod.rs  subtitle.rs
src/view/: list.rs  loading.rs  mod.rs  torrent.rs
